Adding mock-up section

--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
     <header class="intro-header">
       <div class="container">
         <div class="intro-message">
-          <h3>Get your fix!</h3>
-          
+          <h3 class="bottom-align-text">Get your fix!</h3>
         </div>
       </div>
     </header>
@@ -65,13 +64,11 @@
           <div class="col-lg-5 ml-auto">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-            <p class="lead">A special thanks to
-              <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>
-              for providing the photographs that you see in this template. Visit their website to become a member.</p>
+            <h2 class="section-heading">Mock-up</h2>
+            <p class="lead">Flixme is a Netflix-like app project. The mock-up was done with <a href="https://mockingbot.com/signin">MockingBot.</a></p>
           </div>
           <div class="col-lg-5 mr-auto">
-            <img class="img-fluid" src="img/ipad.png" alt="">
+            <iframe src="https://mockingbot.com/app/zy0Iffpg3DQIIX9xe00XeDo5Lppl1wJ/embed" width="488" height="900" allowTransparency="true" frameborder="0"></iframe>
           </div>
         </div>
 
