Updated third part and contact
Updated third part of page and contact details, links to exteernal sites.

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="#mockup">Mockup</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Service</a>
+              <a class="nav-link" href="#web">The website</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -57,7 +57,7 @@
     </header>
 
     <!-- Page Content -->
-    <section class="content-section-a">
+    <section id="mockup" class="content-section-a">
 
       <div class="container">
         <div class="row">
@@ -65,7 +65,13 @@
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
             <h2 class="section-heading">Mock-up</h2>
-            <p class="lead">Flixme is a Netflix-like app project. The mock-up was done with <a href="https://mockingbot.com/signin">MockingBot.</a></p>
+            <p class="lead">Flixme is a Netflix-like app project. The mock-up was done with <a href="https://mockingbot.com/signin">MockingBot</a> for <strong>training</strong> purposes only.<br>
+              <br>Integer quis euismod eros, ac dictum ipsum. Duis euismod diam dapibus varius scelerisque. Aliquam pulvinar ex nec justo interdum, quis sollicitudin nisi sodales. Nam rhoncus velit nec lacus blandit, non ornare massa ullamcorper.
+            <br>
+            <br>Nunc nisl ex, bibendum et ultricies sit amet, venenatis vel arcu. Cras ultricies dolor vel ligula aliquam consectetur. Sed malesuada lectus tellus, vitae pretium magna accumsan luctus. Donec tristique orci in rhoncus hendrerit. Mauris vulputate quam a lorem hendrerit, a ullamcorper tortor semper. Vivamus et luctus urna, vitae sagittis sem. Donec interdum justo ut est cursus, et faucibus eros ullamcorper. 
+            <br>
+            <br>Vivamus euismod, est a tempor viverra, nunc mauris tempus ipsum, posuere eleifend orci nisi at tortor. Ut eget ultricies massa, non laoreet ligula. Aenean elementum leo augue, et pharetra dolor ornare et.
+            </p>
           </div>
           <div class="col-lg-5 mr-auto">
             <iframe src="https://mockingbot.com/app/zy0Iffpg3DQIIX9xe00XeDo5Lppl1wJ/embed" width="488" height="900" allowTransparency="true" frameborder="0"></iframe>
@@ -76,7 +82,7 @@
       <!-- /.container -->
     </section>
 
-    <section class="content-section-b">
+    <section class="content-section-b" id="web">
 
       <div class="container">
 
@@ -84,12 +90,14 @@
           <div class="col-lg-5 mr-auto order-lg-2">
             <hr class="section-heading-spacer">
             <div class="clearfix"></div>
-            <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-            <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by
-              <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+            <h2 class="section-heading">Flixme website</h2>
+            <p class="lead">This website is developed using <strong>Bootstrap</strong> while the app was made with <strong>jQuery mobile</strong>.
+            <br>
+            <br>
+            Praesent fermentum metus et nisl blandit scelerisque. In fermentum odio id tincidunt vulputate. Sed malesuada erat vitae lobortis malesuada.</p>
           </div>
           <div class="col-lg-5 ml-auto order-lg-1">
-            <img class="img-fluid" src="img/dog.png" alt="">
+            <img class="img-fluid" src="img/screen-dev.png" alt="computer-screen">
           </div>
         </div>
 
@@ -99,54 +107,30 @@
     </section>
     <!-- /.content-section-b -->
 
-    <section class="content-section-a">
-
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-5 ml-auto">
-            <hr class="section-heading-spacer">
-            <div class="clearfix"></div>
-            <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-            <p class="lead">This template features the 'Lato' font, part of the
-              <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as
-              <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
-          </div>
-          <div class="col-lg-5 mr-auto ">
-            <img class="img-fluid" src="img/phones.png" alt="">
-          </div>
-        </div>
-
-      </div>
-      <!-- /.container -->
-
-    </section>
-    <!-- /.content-section-a -->
-
     <aside class="banner">
 
-      <div class="container">
+      <div class="container" id="contact">
 
         <div class="row">
           <div class="col-lg-6 my-auto">
-            <h2>Connect to Start Bootstrap:</h2>
+            <h2></h2>
           </div>
           <div class="col-lg-6 my-auto">
             <ul class="list-inline banner-social-buttons">
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://twitter.com/IannMaCaz?lang=en" target="_blank" class="btn btn-secondary btn-lg">
                   <i class="fa fa-twitter fa-fw"></i>
                   <span class="network-name">Twitter</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://github.com/iannma" target="_blank" class="btn btn-secondary btn-lg">
                   <i class="fa fa-github fa-fw"></i>
                   <span class="network-name">Github</span>
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#" class="btn btn-secondary btn-lg">
+                <a href="https://www.linkedin.com/in/yann-marig-brezac-080175112" target="_blank" class="btn btn-secondary btn-lg">
                   <i class="fa fa-linkedin fa-fw"></i>
                   <span class="network-name">Linkedin</span>
                 </a>
@@ -166,15 +150,11 @@
       <div class="container">
         <ul class="list-inline">
           <li class="list-inline-item">
-            <a href="#">Home</a>
+            <a href="#mockup">Mock-up</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
-            <a href="#about">About</a>
-          </li>
-          <li class="footer-menu-divider list-inline-item">&sdot;</li>
-          <li class="list-inline-item">
-            <a href="#services">Services</a>
+            <a href="#web">This website</a>
           </li>
           <li class="footer-menu-divider list-inline-item">&sdot;</li>
           <li class="list-inline-item">
